--- a/app.json
+++ b/app.json
@@ -8,17 +8,17 @@
         "Save restricted content",
         "bot"
     ],
-    "repository": "https://github.com/187dasharath/savebotworking",
+    "repository": "https://github.com/Saanusalvi1/Savealldetails",
     "website": "",
-    "success_url": "https://t.me/save_restricted",
+    "success_url": "https://t.me/Rasprenotes",
     "env": {
             "API_HASH": {
             "description": "Your API HASH from my.telegram.org",
-            "value": ""
+            "value": "257f47d347157555890a64b12bc0134f"
         },
         "API_ID": {
             "description": "Your API ID from my.telegram.org",
-            "value": ""
+            "value": "20088962"
         },
         "BOT_TOKEN": {
             "description": "Bot token, get it from @BotFather.",
@@ -30,11 +30,11 @@
         },
         "AUTH": {
             "description": "User ID of Bot owner.",
-            "value": ""
+            "value": "6103805199 6190740811"
         },
         "FORCESUB": {
             "description": "Username name of public channel without using '@'.",
-            "value": ""
+            "value": "Chunak"
         }
     },
     "stack": "container"
